--- a/Project1_Clustering/heart_failure_clustering.ipynb
+++ b/Project1_Clustering/heart_failure_clustering.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6ae6afa0",
+   "metadata": {},
+   "source": [
+    "# **Heart Failure Clustering**\n",
+    "\n",
+    "### By **Hari Calzi** & **Salvatore Ferrara**\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "09124239",
@@ -12,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "5d6915e4",
    "metadata": {},
    "outputs": [
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "id": "fb94cff1",
    "metadata": {},
    "outputs": [
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "219a10f0",
    "metadata": {},
    "outputs": [
@@ -178,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "5ab246e0",
    "metadata": {},
    "outputs": [
@@ -227,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "19962a1b",
    "metadata": {},
    "outputs": [
@@ -281,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "e56ed42a",
    "metadata": {},
    "outputs": [],
@@ -300,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "5512d1ba",
    "metadata": {},
    "outputs": [
@@ -342,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "id": "ea6b7e20",
    "metadata": {},
    "outputs": [
@@ -383,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "d70053a5",
    "metadata": {},
    "outputs": [
@@ -428,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "81b1c1bf",
    "metadata": {},
    "outputs": [
@@ -482,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "id": "9680c8e0",
    "metadata": {},
    "outputs": [],
@@ -493,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "id": "262355dc",
    "metadata": {},
    "outputs": [
@@ -560,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "id": "40c64384",
    "metadata": {},
    "outputs": [],
@@ -583,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "id": "a2e1e139",
    "metadata": {},
    "outputs": [
@@ -672,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "id": "42555020",
    "metadata": {},
    "outputs": [
@@ -757,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "id": "468bf7d3",
    "metadata": {},
    "outputs": [
@@ -886,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 19,
    "id": "78f9366e",
    "metadata": {},
    "outputs": [],
@@ -897,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 20,
    "id": "4ccaf3d7",
    "metadata": {},
    "outputs": [
@@ -977,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 21,
    "id": "adfcb283",
    "metadata": {},
    "outputs": [
