--- a/Project1_Clustering/heart_failure_clustering.ipynb
+++ b/Project1_Clustering/heart_failure_clustering.ipynb
@@ -14,17 +14,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "09124239",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ucimlrepo in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.0.7)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.10.3)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.7.0)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (0.13.2)\n",
+      "Requirement already satisfied: numpy in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.1.3)\n",
+      "Requirement already satisfied: pandas in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2020.12.5 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ucimlrepo) (2025.6.15)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (1.3.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (4.58.5)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (25.0)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (11.3.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (3.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Requirement already satisfied: scipy>=1.8.0 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-learn) (1.16.0)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-learn) (1.5.1)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from scikit-learn) (3.6.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\haris\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.1.1 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "pip install ucimlrepo matplotlib scikit-learn seaborn numpy pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5d6915e4",
    "metadata": {},
    "outputs": [
@@ -99,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "fb94cff1",
    "metadata": {},
    "outputs": [
@@ -145,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "219a10f0",
    "metadata": {},
    "outputs": [
@@ -190,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5ab246e0",
    "metadata": {},
    "outputs": [
@@ -239,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "19962a1b",
    "metadata": {},
    "outputs": [
@@ -293,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e56ed42a",
    "metadata": {},
    "outputs": [],
@@ -312,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5512d1ba",
    "metadata": {},
    "outputs": [
@@ -354,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ea6b7e20",
    "metadata": {},
    "outputs": [
@@ -395,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d70053a5",
    "metadata": {},
    "outputs": [
@@ -440,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "81b1c1bf",
    "metadata": {},
    "outputs": [
@@ -494,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9680c8e0",
    "metadata": {},
    "outputs": [],
@@ -505,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "262355dc",
    "metadata": {},
    "outputs": [
@@ -572,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "40c64384",
    "metadata": {},
    "outputs": [],
@@ -595,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "a2e1e139",
    "metadata": {},
    "outputs": [
@@ -684,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "42555020",
    "metadata": {},
    "outputs": [
@@ -769,107 +807,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "468bf7d3",
+   "execution_count": 27,
+   "id": "3822d9d6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Tests for Continuous Variables ---\n",
-      "\n",
-      "Analyzing variable: 'age'\n",
-      "  Kruskal-Wallis: p-value = 0.2724\n",
-      "  -> There is no statistically significant difference between the distributions (based on median).\n",
-      "\n",
-      "Analyzing variable: 'creatinine_phosphokinase'\n",
-      "  Kruskal-Wallis: p-value = 0.7074\n",
-      "  -> There is no statistically significant difference between the distributions (based on median).\n",
-      "\n",
-      "Analyzing variable: 'ejection_fraction'\n",
-      "  Kruskal-Wallis: p-value = 0.0090\n",
-      "  -> The difference between the distributions is statistically significant (based on median).\n",
-      "\n",
-      "Analyzing variable: 'platelets'\n",
-      "  Kruskal-Wallis: p-value = 0.0084\n",
-      "  -> The difference between the distributions is statistically significant (based on median).\n",
-      "\n",
-      "Analyzing variable: 'serum_creatinine'\n",
-      "  Kruskal-Wallis: p-value = 0.2646\n",
-      "  -> There is no statistically significant difference between the distributions (based on median).\n",
-      "\n",
-      "Analyzing variable: 'serum_sodium'\n",
-      "  Kruskal-Wallis: p-value = 0.1590\n",
-      "  -> There is no statistically significant difference between the distributions (based on median).\n",
-      "\n",
-      "Analyzing variable: 'time'\n",
-      "  Kruskal-Wallis: p-value = 0.7780\n",
-      "  -> There is no statistically significant difference between the distributions (based on median).\n",
-      "\n",
-      "\n",
-      "--- Tests for Binary Variables ---\n",
-      "\n",
-      "Analyzing variable: 'anaemia'\n",
-      "  Chi-squared: p-value = 0.1227\n",
-      "  -> There is no statistically significant association.\n",
-      "\n",
-      "Analyzing variable: 'diabetes'\n",
-      "  Chi-squared: p-value = 0.0040\n",
-      "  -> The association is statistically significant.\n",
-      "\n",
-      "Analyzing variable: 'high_blood_pressure'\n",
-      "  Chi-squared: p-value = 0.0452\n",
-      "  -> The association is statistically significant.\n",
-      "\n",
-      "Analyzing variable: 'sex'\n",
-      "  Chi-squared: p-value = 0.0000\n",
-      "  -> The association is statistically significant.\n",
-      "\n",
-      "Analyzing variable: 'smoking'\n",
-      "  Chi-squared: p-value = 0.0000\n",
-      "  -> The association is statistically significant.\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>P-Value</th>\n",
+       "      <th>Significant (p &lt; 0.05)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>sex</td>\n",
+       "      <td>Chi-squared</td>\n",
+       "      <td>&lt; 0.001</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>smoking</td>\n",
+       "      <td>Chi-squared</td>\n",
+       "      <td>&lt; 0.001</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>diabetes</td>\n",
+       "      <td>Chi-squared</td>\n",
+       "      <td>0.0040</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>platelets</td>\n",
+       "      <td>Kruskal-Wallis</td>\n",
+       "      <td>0.0084</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ejection_fraction</td>\n",
+       "      <td>Kruskal-Wallis</td>\n",
+       "      <td>0.0090</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>high_blood_pressure</td>\n",
+       "      <td>Chi-squared</td>\n",
+       "      <td>0.0452</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>anaemia</td>\n",
+       "      <td>Chi-squared</td>\n",
+       "      <td>0.1227</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>serum_sodium</td>\n",
+       "      <td>Kruskal-Wallis</td>\n",
+       "      <td>0.1590</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>serum_creatinine</td>\n",
+       "      <td>Kruskal-Wallis</td>\n",
+       "      <td>0.2646</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>age</td>\n",
+       "      <td>Kruskal-Wallis</td>\n",
+       "      <td>0.2724</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>creatinine_phosphokinase</td>\n",
+       "      <td>Kruskal-Wallis</td>\n",
+       "      <td>0.7074</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>time</td>\n",
+       "      <td>Kruskal-Wallis</td>\n",
+       "      <td>0.7780</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Feature            Test  P-Value Significant (p < 0.05)\n",
+       "10                       sex     Chi-squared  < 0.001                    Yes\n",
+       "11                   smoking     Chi-squared  < 0.001                    Yes\n",
+       "8                   diabetes     Chi-squared   0.0040                    Yes\n",
+       "3                  platelets  Kruskal-Wallis   0.0084                    Yes\n",
+       "2          ejection_fraction  Kruskal-Wallis   0.0090                    Yes\n",
+       "9        high_blood_pressure     Chi-squared   0.0452                    Yes\n",
+       "7                    anaemia     Chi-squared   0.1227                     No\n",
+       "5               serum_sodium  Kruskal-Wallis   0.1590                     No\n",
+       "4           serum_creatinine  Kruskal-Wallis   0.2646                     No\n",
+       "0                        age  Kruskal-Wallis   0.2724                     No\n",
+       "1   creatinine_phosphokinase  Kruskal-Wallis   0.7074                     No\n",
+       "6                       time  Kruskal-Wallis   0.7780                     No"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Statistical tests to compare clusters (Cluster 0 vs Cluster 1), using Kruskal-Wallis for continuous variables and Chi-squared for binary variables\n",
+    "\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
     "\n",
-    "# separate the two groups we want to compare\n",
     "cluster_0 = X[X['cluster'] == 0]\n",
     "cluster_1 = X[X['cluster'] == 1]\n",
+    "alpha = 0.05\n",
+    "results_list = []\n",
     "\n",
-    "print(\"--- Tests for Continuous Variables ---\")\n",
-    "\n",
+    "# Kruskal-Wallis for continuous variables\n",
     "for var in continuous_vars:\n",
-    "    print(f\"\\nAnalyzing variable: '{var}'\")\n",
-    "    \n",
-    "    # Kruskal-Wallis\n",
     "    stat_kw, p_value_kw = stats.kruskal(cluster_0[var], cluster_1[var])\n",
-    "        \n",
-    "    print(f\"  Kruskal-Wallis: p-value = {p_value_kw:.4f}\")\n",
-    "    if p_value_kw < 0.05:\n",
-    "        print(\"  -> The difference between the distributions is statistically significant (based on median).\")\n",
-    "    else:\n",
-    "        print(\"  -> There is no statistically significant difference between the distributions (based on median).\")\n",
+    "    results_list.append({\n",
+    "        'Feature': var,\n",
+    "        'Test': 'Kruskal-Wallis',\n",
+    "        'P-Value': p_value_kw,\n",
+    "        'Significant (p < 0.05)': 'Yes' if p_value_kw < alpha else 'No'\n",
+    "    })\n",
     "\n",
-    "print(\"\\n\\n--- Tests for Binary Variables ---\")\n",
-    "\n",
+    "# Chi-squared test for binary variables\n",
     "for var in binary_vars:\n",
-    "    print(f\"\\nAnalyzing variable: '{var}'\")\n",
     "    contingency_table = pd.crosstab(X['cluster'], X[var])\n",
-    "    \n",
-    "    # Chi-squared test\n",
-    "    chi2, p_value_chi2, _, _ = stats.chi2_contingency(contingency_table)\n",
-    "    \n",
-    "    print(f\"  Chi-squared: p-value = {p_value_chi2:.4f}\")\n",
-    "    if p_value_chi2 < 0.05:\n",
-    "        print(\"  -> The association is statistically significant.\")\n",
+    "    if contingency_table.shape == (2, 2):\n",
+    "        chi2, p_value_chi2, _, _ = stats.chi2_contingency(contingency_table)\n",
     "    else:\n",
-    "        print(\"  -> There is no statistically significant association.\")\n",
-    "        "
+    "        p_value_chi2 = 1.0\n",
+    "\n",
+    "    results_list.append({\n",
+    "        'Feature': var,\n",
+    "        'Test': 'Chi-squared',\n",
+    "        'P-Value': p_value_chi2,\n",
+    "        'Significant (p < 0.05)': 'Yes' if p_value_chi2 < alpha else 'No'\n",
+    "    })\n",
+    "\n",
+    "results_df = pd.DataFrame(results_list)\n",
+    "results_df = results_df.sort_values(by='P-Value')\n",
+    "\n",
+    "def format_pvalue(p):\n",
+    "    if p < 0.001:\n",
+    "        return \"< 0.001\"\n",
+    "    else:\n",
+    "        return f\"{p:.4f}\"\n",
+    "results_df['P-Value'] = results_df['P-Value'].apply(format_pvalue)\n",
+    "results_df"
    ]
   },
   {
@@ -877,7 +1001,7 @@
    "id": "bfdd6c03",
    "metadata": {},
    "source": [
-    "## We can see that **sex** is the most significant feature in distinguishing the two groups, followed by smoking, ejection_fraction, platelets, diabetes and high_blood_pressure"
+    "## We can see that **sex** is the most significant feature in distinguishing the two groups, followed by smoking, diabetes, platelets, ejection_fraction and high_blood_pressure"
    ]
   },
   {
@@ -898,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "78f9366e",
    "metadata": {},
    "outputs": [],
@@ -909,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "4ccaf3d7",
    "metadata": {},
    "outputs": [
@@ -989,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "adfcb283",
    "metadata": {},
    "outputs": [
