--- a/Project2_DataIntegration/PDAC_data_integration.ipynb
+++ b/Project2_DataIntegration/PDAC_data_integration.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "14236e6f",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "33669ddf",
    "metadata": {},
    "outputs": [
@@ -105,6 +105,97 @@
     "print(\"Check for new dimensions (samples, features) after trasposition:\")\n",
     "for label, df in zip(labels, data):\n",
     "    print(f\"{label}: {df.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72dbfb31",
+   "metadata": {},
+   "source": [
+    "**Clinical data**: contains demographic, clinical, and pathological information for each patient (identified by case_id).\n",
+    "\n",
+    "Demographic and Registry Data:\n",
+    "- age: age \n",
+    "- sex: sex\n",
+    "- race: ethnicity\n",
+    "- participant_country: country of origin\n",
+    "\n",
+    "Lifestyle Data:\n",
+    "- bmi: body mass index\n",
+    "- alcohol_consumption: history of alcohol consumption\n",
+    "- tobacco_smoking_history: history of cigarette consumption\n",
+    "\n",
+    "Tumor Pathological Characteristics:\n",
+    "- histology_diagnosis: diagnosis \n",
+    "- tumor_site: tumor location\n",
+    "- tumor_size_cm: tumor size in centimeters.\n",
+    "- tumor_necrosis, lymph_vascular_invasion, perineural_invasion: microscopic characteristics of tumor aggressiveness.\n",
+    "\n",
+    "Cancer Staging:\n",
+    "- pathologic_staging_regiol_lymph_nodes_pn: lymph node status\n",
+    "- pathologic_staging_primary_tumor_pt: size/extent of the primary tumor.\n",
+    "- pathologic_staging_distant_metastasis_pm: presence of distant metastasis.\n",
+    "- clinical_staging_distant_metastasis_cm: the overall stage.\n",
+    "\n",
+    "Outcome Data:\n",
+    "- follow_up_days: number of days the patient was monitored.\n",
+    "- vital_status: vital status.\n",
+    "- cause_of_death: cause of death."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7818d94",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c68d530",
+   "metadata": {},
+   "source": [
+    "**Omics views**\n",
+    "\n",
+    "**circRNA**: contains the expression levels (counts) of circular RNA.\n",
+    "\n",
+    "- Rows: each row represents a feature, meaning a specific circular RNA.\n",
+    "- Columns: each column represents a sample, meaning a patient corresponding to the case_id in the clinical file.\n",
+    "- Values: the numbers within the table indicate the expression level (quantity) of that circRNA in that patient.\n",
+    "\n",
+    "**miRNA**: contains the expression levels (counts) of microRNAs (miRNA).\n",
+    "\n",
+    "- Rows: each row represents a feature, meaning a specific miRNA.\n",
+    "- Columns: each column represents a sample, meaning a patient corresponding to the case_id in the clinical file.\n",
+    "- Values: the numbers indicate the expression level of that miRNA in that patient. many NA values are also noted, which indicate missing data.\n",
+    "\n",
+    "**mRNA**: contains the expression levels (counts) of mRNAs (messenger RNA), which represent the genes.\n",
+    "\n",
+    "- Rows: each row represents a feature, meaning a specific gene identified by its symbol.\n",
+    "- Columns: each column represents a sample, meaning a patient corresponding to the case_id in the clinical file.\n",
+    "- Values: the numbers indicate the expression level (quantity) of that gene in that patient.\n",
+    "\n",
+    "**phosphoproteome gene**: contains phosphoproteomics data (which measure phosphorylated proteins), aggregated at the gene level.\n",
+    "\n",
+    "- Rows: each row represents a feature, meaning a gene.\n",
+    "- Columns: each column represents a sample, meaning a patient.\n",
+    "- Values: the numbers indicate the phosphorylation level associated with that gene in that patient.\n",
+    "\n",
+    "**proteome gene**: contains proteomics data (which measure protein abundance), aggregated at the gene level.\n",
+    "\n",
+    "- Rows: each row represents a feature, meaning a gene.\n",
+    "- Columns: each column represents a sample, meaning a patient.\n",
+    "- Values: the numbers indicate the abundance level of the protein corresponding to that gene in that patient. \n",
+    "\n",
+    "**SCNA gene**: contains data on SCNA (Somatic Copy Number Alterations), meaning Somatic Copy Number Alterations at the gene level. in practice, it measures whether the genes in a patient's tumor cells have been deleted (deletions) or duplicated (amplifications) compared to the normal copy number (usually 2).\n",
+    "\n",
+    "- Rows: each row represents a feature, meaning a gene.\n",
+    "- Columns: each column represents a sample, meaning a patient.\n",
+    "- Values: the numbers indicate the extent of the alteration:\n",
+    "  - negative values suggest a deletion (copy loss).\n",
+    "  - positive values suggest an amplification (copy gain).\n",
+    "  - values close to zero indicate a stable copy number (no alteration)."
    ]
   },
   {
