--- a/Project2_DataIntegration/PDAC_data_integration.ipynb
+++ b/Project2_DataIntegration/PDAC_data_integration.ipynb
@@ -80,34 +80,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "33669ddf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Check for new dimensions (samples, features) after trasposition:\n",
-      "circRNA: (137, 3979)\n",
-      "miRNA: (137, 2416)\n",
-      "mRNA: (137, 28057)\n",
-      "phoshoproteome: (137, 8004)\n",
-      "proteome: (137, 11662)\n",
-      "SCNA: (137, 19906)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# trasposition of data to have samples as rows and features as columns\n",
-    "data = [df.T for df in data]\n",
-    "print(\"Check for new dimensions (samples, features) after trasposition:\")\n",
-    "for label, df in zip(labels, data):\n",
-    "    print(f\"{label}: {df.shape}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "72dbfb31",
    "metadata": {},
@@ -204,6 +176,34 @@
    "metadata": {},
    "source": [
     "# Data pre-processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "33669ddf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check for new dimensions (samples, features) after trasposition:\n",
+      "circRNA: (137, 3979)\n",
+      "miRNA: (137, 2416)\n",
+      "mRNA: (137, 28057)\n",
+      "phoshoproteome: (137, 8004)\n",
+      "proteome: (137, 11662)\n",
+      "SCNA: (137, 19906)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# trasposition of data to have samples as rows and features as columns\n",
+    "data = [df.T for df in data]\n",
+    "print(\"Check for new dimensions (samples, features) after trasposition:\")\n",
+    "for label, df in zip(labels, data):\n",
+    "    print(f\"{label}: {df.shape}\")"
    ]
   },
   {
@@ -2608,7 +2608,7 @@
    "source": [
     "After analyzing these graphs, we drew some conclusions:\n",
     "\n",
-    "- the graphs show differences between the various clusters, which were not highlighted by the statistical tests.\n",
+    "- the plots show differences between the various clusters, which were not highlighted by the statistical tests.\n",
     "\n",
     "- the difference between the relevant factors according to the statistical tests and the heatmap comes from the fact that the mean values do not truly represent the data, but since they were continuous variables, they were the best measure for visualization."
    ]
